@@ -2,7 +2,7 @@
  * #%L
  * HAPI FHIR Storage api
  * %%
- * Copyright (C) 2014 - 2025 Smile CDR, Inc.
+ * Copyright (C) 2014 - 2026 Smile CDR, Inc.
  * %%
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,23 +19,28 @@
  */
 package ca.uhn.fhir.jpa.api.dao;
 
+import jakarta.annotation.Nonnull;
+import org.hl7.fhir.instance.model.api.IIdType;
+
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-import static org.apache.commons.lang3.ObjectUtils.defaultIfNull;
+import static java.util.Collections.unmodifiableList;
+import static org.apache.commons.lang3.ObjectUtils.getIfNull;
 
 public class ReindexOutcome {
 
 	private List<String> myWarnings;
+	private IIdType myResourceId;
 
 	/**
 	 * True if there is additional (async) work to wait on.
 	 */
 	private boolean myHasPendingWork;
 
+	@Nonnull
 	public List<String> getWarnings() {
-		return defaultIfNull(myWarnings, Collections.emptyList());
+		return unmodifiableList(getIfNull(myWarnings, List.of()));
 	}
 
 	public void addWarning(String theWarning) {
@@ -51,5 +56,13 @@ public class ReindexOutcome {
 
 	public void setHasPendingWork(boolean theHasPendingWork) {
 		myHasPendingWork = theHasPendingWork;
+	}
+
+	public void setResourceId(IIdType theResourceId) {
+		myResourceId = theResourceId;
+	}
+
+	public IIdType getResourceId() {
+		return myResourceId;
 	}
 }
